Fix dropdown bug on mobile

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -228,8 +228,7 @@ nav ul ul.show {
     visibility: hidden;
     transition: max-height 0.3s;
   }
-  nav ul li:hover > ul {
-    /* top: var(--nav-height); */
+  nav ul ul.show {
     max-height: 1000px;
     opacity: 1;
     visibility: visible;
